# autoencoder-from-scratch

./: .gitignore  CMakeLists.txt  README.md
src/: reconstruct_main.cpp  train_main.cpp
src/io/: image_io.cpp  image_io.h  model_io.cpp  model_io.h
src/math/: tensor.cpp  tensor.h
src/models/: autoencoder.cpp  autoencoder.h
src/nn/: dense.cpp  dense.h  layer.h  mse_loss.cpp  mse_loss.h  network.cpp  network.h  relu.cpp  relu.h  sigmoid.cpp  sigmoid.h
src/optim/: adam.cpp  adam.h
test/: test_activations.cpp  test_dense.cpp  test_network.cpp  test_tensor.cpp
